--- a/productpage.css
+++ b/productpage.css
@@ -6,8 +6,7 @@ body {
   margin: 0;
   padding: 0;
 }
-
-header {
+​ header {
   background-color: #206cb3;
   background-image: linear-gradient(45deg, #206cb3, #f5db81);
   display: flex;
@@ -22,8 +21,7 @@ header {
   padding-left: 20%;
   padding-top: 10%;
 }
-
-.menu-items {
+​ .menu-items {
   font-size: medium;
   font-family: 'Lato', sans-serif;
   color: white;
@@ -39,12 +37,10 @@ header {
   margin-left: 50px;
   display: inline-flex;
 }
-
-a {
+​ a {
   text-decoration: none;
 }
-
-button {
+​ button {
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
   outline: 0;
@@ -62,8 +58,7 @@ button {
   margin-top: 40%;
   margin-left: 300%;
 }
-
-.button2 {
+​ .button2 {
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
   outline: 0;
@@ -80,16 +75,14 @@ button {
   margin-left: 0%;
   margin-top: 0%;
 }
-
-.login-page {
+​ .login-page {
   width: 400px;
   height: 800px;
   padding: 3% 0 0;
   /* margin: auto; */
   margin-left: 680px;
 }
-
-.form {
+​ .form {
   position: relative;
   justify-content: right;
   z-index: 1;
@@ -102,25 +95,21 @@ button {
   font-family: 'lato';
   margin-left: 1250px;
 } */
+​
 /* calendar */
-
-$off_white: #fafafa;
-$light_grey: #a39d9e;
+​
 * {
   box-sizing: border-box;
 }
-
-.container {
+​ .container {
   margin-top: -800px;
   margin-left: 5%;
   width: 400px;
 }
-
-.light {
+​ .light {
   background-color: #fff;
 }
-
-.calendar {
+​ .calendar {
   width: 370px;
   box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
   font-family: 'Roboto', sans-serif;
@@ -128,13 +117,11 @@ $light_grey: #a39d9e;
   color: #363b41;
   display: inline-block;
 }
-
-.calendar_header {
+​ .calendar_header {
   border-bottom: 2px solid rgba(0, 0, 0, 0.08);
 }
-
-.header_copy {
-  color: $light_grey;
+​ .header_copy {
+  color: #a39d9e;
   font-size: 20px;
 }
 .calendar_plan {
@@ -156,8 +143,7 @@ $light_grey: #a39d9e;
   margin: 20px 0;
   display: inline-block;
 }
-
-.cl_add {
+​ .cl_add {
   display: inline-block;
   width: 40px;
   height: 40px;
@@ -169,36 +155,30 @@ $light_grey: #a39d9e;
   padding: 11px 13px;
 }
 .calendar_events {
-  color: $light_grey;
+  color: #a39d9e;
 }
 .ce_title {
   font-size: 14px;
 }
-
-.event_item {
+​ .event_item {
   margin: 18px 0;
   padding: 5px;
   cursor: pointer;
-  &:hover {
-    background-color: #206cb3;
-    background-image: linear-gradient(45deg, #206cb3, #f5db81);
-    box-shadow: 0px 0px 52px -18px rgba(0, 0, 0, 0.75);
-    .ei_Dot {
-      background-color: #fff;
-    }
-    .ei_Copy,
-    .ei_Title {
-      color: #fff;
-    }
-  }
 }
-
-.ei_Dot,
+​ .event_item:hover {
+  background-color: #206cb3;
+  background-image: linear-gradient(45deg, #206cb3, #f5db81);
+  box-shadow: 0px 0px 52px -18px rgba(0, 0, 0, 0.75);
+}
+.event_item:hover .ei_Copy,
+.event_item:hover .ei_Title {
+  color: #fff;
+}
+​ .ei_Dot,
 .ei_Title {
   display: inline-block;
 }
-
-.ei_Dot {
+​ .ei_Dot {
   border-radius: 50%;
   width: 10px;
   height: 10px;
@@ -208,60 +188,50 @@ $light_grey: #a39d9e;
 .dot_active {
   background-color: #206cb3;
 }
-
-.ei_Title {
+​ .ei_Title {
   margin-left: 10px;
   color: #363b41;
 }
-
-.ei_Copy {
+​ .ei_Copy {
   font-size: 12px;
   margin-left: 27px;
 }
-
-footer {
+​ footer {
   font-family: 'Lato';
   font-weight: bold;
   text-align: center;
   margin-top: 100px;
   padding-top: 5px;
 }
-
-.graph {
+​ .graph {
   margin-bottom: 1em;
   font: 'lato';
   margin-left: 640px;
   margin-top: -580px;
 }
-
-.graph caption {
+​ .graph caption {
   font: bold 150%/120% 'lato';
   padding-bottom: 0.33em;
   text-align: left;
   margin-left: 39px;
 }
-
-.graph tbody th {
+​ .graph tbody th {
   text-align: right;
 }
-
-@supports (display: grid) {
+​ @supports (display: grid) {
   @media (min-width: 32em) {
     .graph {
       display: block;
       width: 800px;
       height: 500px;
     }
-
-    .graph caption {
+    ​ .graph caption {
       display: block;
     }
-
-    .graph thead {
+    ​ .graph thead {
       display: none;
     }
-
-    .graph tbody {
+    ​ .graph tbody {
       position: relative;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(2em, 1fr));
@@ -279,8 +249,7 @@ footer {
         transparent 20%
       );
     }
-
-    .graph tbody:before,
+    ​ .graph tbody:before,
     .graph tbody:after {
       position: absolute;
       left: -3.2em;
@@ -288,33 +257,27 @@ footer {
       text-align: right;
       font: bold 80%/120% arial, helvetica, sans-serif;
     }
-
-    .graph tbody:before {
+    ​ .graph tbody:before {
       content: '100%';
       top: -0.6em;
     }
-
-    .graph tbody:after {
+    ​ .graph tbody:after {
       content: '0%';
       bottom: -0.6em;
     }
-
-    .graph tr {
+    ​ .graph tr {
       position: relative;
       display: block;
     }
-
-    .graph tr:hover {
+    ​ .graph tr:hover {
       z-index: 999;
     }
-
-    .graph th,
+    ​ .graph th,
     .graph td {
       display: block;
       text-align: center;
     }
-
-    .graph tbody th {
+    ​ .graph tbody th {
       position: absolute;
       top: -3em;
       left: 0;
@@ -325,24 +288,20 @@ footer {
       text-indent: 0;
       transform: rotate(-45deg);
     }
-
-    .graph tbody th:after {
+    ​ .graph tbody th:after {
       content: '';
     }
-
-    .graph td {
+    ​ .graph td {
       width: 100%;
       height: 100%;
       background: #206cb3;
       border-radius: 0.5em 0.5em 0 0;
       transition: background 0.5s;
     }
-
-    .graph tr:hover td {
+    ​ .graph tr:hover td {
       opacity: 0.7;
     }
-
-    .graph td span {
+    ​ .graph td span {
       overflow: hidden;
       position: absolute;
       left: 50%;
@@ -356,8 +315,7 @@ footer {
       transition: opacity 0.5s;
       color: white;
     }
-
-    .toggleGraph:checked + table td span,
+    ​ .toggleGraph:checked + table td span,
     .graph tr:hover td span {
       width: 4em;
       margin-left: -2em;
@@ -365,8 +323,7 @@ footer {
     }
   }
 }
-
-.piechart {
+​ .piechart {
   margin-top: -810px;
   margin-left: 1200px;
   display: block;
@@ -381,13 +338,11 @@ footer {
   box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
   background-image: conic-gradient(#206cb3 70deg, #f5db81 0 235deg, #206cb3 0);
 }
-
-.pietext {
+​ .pietext {
   text-align: center;
   padding-top: 25px;
 }
-
-@media screen and (max-width: 1300px) {
+​ @media screen and (max-width: 1300px) {
   header {
     justify-content: space-around;
     width: 100%;
@@ -398,13 +353,11 @@ footer {
     margin-left: -10px;
     margin-top: 3px;
   }
-
-  .navbar {
+  ​ .navbar {
     width: 100%;
     justify-content: space-evenly;
   }
-
-  .menu-items {
+  ​ .menu-items {
     margin-top: 20px;
     margin-bottom: 50px;
     margin-left: 20px;
@@ -424,23 +377,19 @@ footer {
   /* .calendar {
     width: 300px;
   } */
-
-  .button2 {
+  ​ .button2 {
     margin-left: 200px;
     margin-top: -22px;
   }
-
-  .graph {
+  ​ .graph {
     width: 40%;
     margin-left: 550px;
   }
-
-  .form {
+  ​ .form {
     width: 70%;
     margin-left: -100px;
   }
-
-  .piechart {
+  ​ .piechart {
     width: 150px;
     height: 100px;
     padding-top: 50px;
