--- a/productpage.css
+++ b/productpage.css
@@ -96,6 +96,8 @@ button {
   margin-left: 1250px;
 } */
 /* calendar */
+$off_white: #fafafa;
+$light_grey: #a39d9e;
 * {
   box-sizing: border-box;
 }
@@ -119,7 +121,7 @@ button {
   border-bottom: 2px solid rgba(0, 0, 0, 0.08);
 }
 .header_copy {
-  color: #a39d9e;
+  color: $light_grey;
   font-size: 20px;
 }
 .calendar_plan {
@@ -153,7 +155,7 @@ button {
   padding: 11px 13px;
 }
 .calendar_events {
-  color: #a39d9e;
+  color: $light_grey;
 }
 .ce_title {
   font-size: 14px;
@@ -162,15 +164,18 @@ button {
   margin: 18px 0;
   padding: 5px;
   cursor: pointer;
-}
-.event_item:hover {
-  background-color: #206cb3;
-  background-image: linear-gradient(45deg, #206cb3, #f5db81);
-  box-shadow: 0px 0px 52px -18px rgba(0, 0, 0, 0.75);
-}
-.event_item:hover .ei_Copy,
-.event_item:hover .ei_Title {
-  color: #fff;
+  &:hover {
+    background-color: #206cb3;
+    background-image: linear-gradient(45deg, #206cb3, #f5db81);
+    box-shadow: 0px 0px 52px -18px rgba(0, 0, 0, 0.75);
+    .ei_Dot {
+      background-color: #fff;
+    }
+    .ei_Copy,
+    .ei_Title {
+      color: #fff;
+    }
+  }
 }
 .ei_Dot,
 .ei_Title {
